2009-06-24  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.5
	* Using xshm as default xine video driver
	* Added conditional compile for recent DVB parameters (not available in Debian stable)
	* Fix for "GtkSpinButton: setting an adjustment with non-zero page size is deprecated"

2009-06-24  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.4
	* Fixed xine audio/video driver saving in preferences dialog
	* Added logging to NIT code 
	* Added scrolled window to scan results tree
	* Added Terrestrial/Cable delivery system descriptor parser
	* Wrapping database updates in a BEGIN/END transaction block for better performance
	* Removed SaveThread code, no longer required
	* Accepting empty text encoding as 'auto'
	* Fixed hidden cursor not being made visible over drawing area

2009-06-15  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.3
	* Added extra logging for character set conversion
	* Updated Channel Editor and Scan Dialog
	* Fixed hang when cancelling the scan dialog
	* Fixed issue with selecting new channel after Channel Editor/Scan Dialog

2009-06-14  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.2
	* Patched some more code that might potentially hang
	* Fixed debug information when searching for service ID
	* Fullscreen workaround is now turned off by default

2009-06-02  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.1
	* Fix to stop EPG update crashing the application after faulty save (LP: #72872)
	* Fixed spin buttons from GtkBuilder conversion (LP: #382197)
	* Fixed ComboBoxs in preferences dialog
	* Application can now start without a device.

2009-05-24  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.0
	* Converted to GtkBuilder

2009-05-24  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.14
	* Fixed icon on application popup menu
	* Not updating EPG when it's not shown
	* Changed "read_timeout" option to "read-timeout"

2009-05-15  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.13