@@ -62,13 +62,15 @@ void Thread::start()
 }
 	
 void Thread::on_run()
-{		
-	TRY
+{
 	started = true;
+
+	TRY
 	run();
+	THREAD_CATCH;
+
 	terminated = true;
 	g_debug("Thread '%s' exited", name.c_str());
-	THREAD_CATCH
 }
 	
 void Thread::join(gboolean set_terminate)
