@@ -1,9 +1,11 @@
-2009-06-24  Michael Lamothe <michael.lamothe@gmail.com>
+2009-07-02  Michael Lamothe <michael.lamothe@gmail.com>
 
 	* 0.9.5
 	* Using xshm as default xine video driver
 	* Added conditional compile for recent DVB parameters (not available in Debian stable)
 	* Fix for "GtkSpinButton: setting an adjustment with non-zero page size is deprecated"
+	* Removed g_error() calls from THREAD_CATCH which forced the application to abort
+	* Made initial tuning file parser a little more robust
 
 2009-06-24  Michael Lamothe <michael.lamothe@gmail.com>
 
